fixes slideshow sticking out

--- a/skin/frontend/ultimo/default/css/_config/design_default.css
+++ b/skin/frontend/ultimo/default/css/_config/design_default.css
@@ -1,6 +1,6 @@
 /**
  * WARNING: do not edit this file. It was generated automatically, your changes will be overwritten and lost.
- * 2016-05-03 17:12:21 */
+ * 2016-05-04 16:44:31 */
 
 
 
@@ -329,10 +329,16 @@ span.icon.icon-color-productview {
 
 
 .inner-container {
-	padding-left: 12px;
-	padding-right: 12px;
+	padding-left: 0px;
+	padding-right: 0px;
 }
 
+	@media only screen and (max-width: 479px) {
+		.container > .inner-container {
+			padding-left: 12px;
+			padding-right: 12px;
+		}
+	}
 
 
 
