--- a/skin/frontend/ultimo/default/css/infortis/ultra-slideshow/ultra-slideshow.css
+++ b/skin/frontend/ultimo/default/css/infortis/ultra-slideshow/ultra-slideshow.css
@@ -16,6 +16,7 @@
 	margin-left: -269px;
 	position: relative;
 	float: right;
+	left: -14px;
 	max-width: 400px;
 	height: 400px;
 	width: 400px;
